--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-certifi==2019.9.11
-chardet==3.0.4
-colorama==0.4.1
+-i https://pypi.org/simple
+colorama==0.4.3 ; sys_platform == 'win32'
 comtypes==1.1.7
-idna==2.8
 loguru==0.3.2
-numpy==1.17.2
-Pillow==6.2.0
+numpy==1.18.4 ; python_version >= '3.0'
+pillow==7.1.2
 python-dateutil==2.8.0
 pywin32==225
-requests==2.22.0
-six==1.12.0
-urllib3==1.25.6
+six==1.14.0
 win32-setctime==1.0.1
-wxPython==4.0.6
+wxpython==4.1.0
